Mail Small changes

--- a/config/templates/welcome.html
+++ b/config/templates/welcome.html
@@ -35,9 +35,10 @@
       <br />
       Please find the below link and complete your process of registration.
       <br />
-      Link : <a href="{{ loginLink }}" target="_blank">{{ loginLink }}</a>
+      Register Link :
+      <a href="{{ registerLink }}" target="_blank">{{ registerLink }}</a>
       <br />
-      Login Link : http://entitledarts.com/hrm
+      Login Link : <a href="{{ loginLink }}" target="_blank">{{ loginLink }}</a>
       <br />
       Hope you will enjoy your future journey with us.<br /><br /><br />
 
