Forget Password functionality Done

--- a/config/templates/forgetPass.html
+++ b/config/templates/forgetPass.html
@@ -24,23 +24,23 @@
         z-index: 7;
         text-align: center;"
       >
-        <h1 style="margin-top: 35px;">Welcome to EntitleArts HRM</h1>
+        <h1 style="margin-top: 35px;">Forget Password EntitleArts HRM</h1>
       </div>
     </div>
     <div style="clear:both"></div>
     <div style="margin:20px">
       <h2>Hello {{ userName }}</h2>
       <br />
-      We welcome you to the HRM of EntitleArts <br />
+      We received your request to reset password <br />
       <br />
-      Please find the below link and complete your process of registration.
+      Please find the below link and complete reset your password.
       <br />
-      Register Link :
-      <a href="{{ registerLink }}" target="_blank">{{ registerLink }}</a>
+      Reset Password Link :
+      <a href="{{ resetLink }}" target="_blank">{{ resetLink }}</a>
       <br />
       Login Link : <a href="{{ loginLink }}" target="_blank">{{ loginLink }}</a>
       <br />
-      Hope you will enjoy your future journey with us.<br /><br /><br />
+      If you did not asked for reset, please ignore this mail!!!!<br /><br /><br />
 
       Regards, <br />
       Admin
